# AliyarNut

./: .gitignore  Dockerfile  README.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.agent.txt  requirements.gui.txt  requirements.telegram.txt  requirements.txt  test.py  testamocrm.py
ai_service/: main.py
ai_service/agents/: core_agent.py
ai_service/config/: fixed_touches.json  settings.py  settings.yaml
ai_service/evals/: regression_tests.py  test.py
ai_service/memory/: database.py  langmem.py
ai_service/middleware/: ContentFilter.py  SafetyGuardrail.py  __init__.py
ai_service/models/: context.py  lead.py
ai_service/prompts/experiments/: test.md
ai_service/prompts/system/: core.md  tools_guidelines.md
ai_service/services/: amocrm_service.py  chat_service.py  media_service.py  rag_knowledge_service.py  reminder_scheduler.py  telegram_service.py
ai_service/tools/: __init__.py  data_collector.py  name.py  rag_tools.py  reminders.py  send_photo_pack.py  send_reaction.py  weather.py
data/docs/: 01_trening_1_siyanie_kozhi.md  02_oteki_3_rekomendacii.md  03_ekspertnost_umida.md  04_lichnost_umida.md  05_faq_offer_vozrazheniya.md
scripts/: db_init.py
telegram_service/: agent_service.py  app.py  telegram_client.py
telegram_service/core/: uptime.py
telegram_service/filters/: __init__.py  chat_type.py
telegram_service/handlers/: __init__.py  main_handler.py
telegram_service/models/: model.py
telegram_service/services/: send_geo.py  send_photos.py
telegram_service/utils/: __init__.py  thread_id.py
